[package]
name = "ptrans-data"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
env = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util", "timeout"] }
tower-http = { version = "0.6.1", features = ["add-extension", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio",
  "mysql",
  "macros",
  "tls-rustls"
] }
dotenvy = "0.15.7"
reqwest = { version = "0.13.1", features = ["json", "blocking", "rustls"] }
csv = "1.4.0"
chrono = "0.4.43"
regex = "1.12.2"
